[workspace]
resolver = "3"
members = [
    "crate/solana-stream-sdk",
    "crate/r2-uploader",
    "client/shreds-rs",
    "client/geyser-rs",
    "client/shreds-udp-rs",
]
exclude = [
    "package/solana-shreds-client",
    "package/solana-entry-decoder",
    "temp-release/shreds-rs",
    "temp-release/geyser-rs",
    "temp-release/shreds-udp-rs",
]

[workspace.package]
version = "1.3.0"
description = ""
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.7"
backoff = "0.4"
bincode = "1.3"
borsh = "1.5"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
crossbeam-channel = "0.5"
dashmap = "6.1"
dotenv = "0.15"
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
hostname = "0.4"
http = "0.2"
itertools = "0.13"
json5 = "0.4"
log = "0.4"
maplit = "1.0"
prost = "0.14.3"
prost-types = "0.14.3"
protobuf-src = "1.1"
rand = "0.8"
reqwest = { version = "0.12" }
serde_json = "1"
serde_jsonc = "1"
serde = "1"
signal-hook = "0.3"
solana-client = "3.0"
solana-rpc-client = "3.1"
solana-hash = "3.0"
solana-metrics = "3.1"
solana-net-utils = "3.1"
solana-perf = "3.1"
solana-pubkey = "3.0"
solana-signature = "3.0"
solana-sdk = "3.0"
solana-vote-program = "3.1"
solana-streamer = "3.1"
solana-stream-sdk = { path = "crate/solana-stream-sdk" }
solana-ledger = { version = "3.1", features = ["agave-unstable-api"] }
solana-entry = "3.1"
solana-account-decoder = "3.1"
solana-transaction-context = "3.1"
solana-transaction-error = "3.0"
solana-transaction-status = "3.1"
solana-packet = "3.0"
socket2 = "0.6"
thiserror = "1"
tokio = { version = "1.49" }
tokio-util = "0.7"
tonic = { version = "0.14.3" }
tonic-build = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
url = "2.5"
yellowstone-grpc-client = "11.0"
yellowstone-grpc-proto = "11.0"
