[package]
name = "geyser-rs"
version = { workspace = true }
description = "Rust client for Solana Geyser streaming"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "geyser-rs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
chrono = { workspace = true }
dashmap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
json5 = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_jsonc = { workspace = true }
solana-stream-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-hash = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]  }
tonic = { workspace = true }
url = { workspace = true }
