[package]
name = "r2-uploader"
version = "0.4.0"
edition = "2024"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
description = "A CLI tool for uploading compiled binaries to Cloudflare R2 storage"
license = "Apache-2.0"
publish = false
repository = "https://github.com/ValidatorsDAO/solana-stream"
keywords = ["cloudflare", "r2", "upload", "cli", "binary"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "r2"
path = "src/bin/upload_bin_to_r2.rs"

[dependencies]
reqwest = { workspace = true, features = ["json", "multipart", "stream", "blocking", "rustls"] }
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
