[package]
name = "solana-stream-sdk"
version = "1.3.0"
description = "Rust SDK for Solana streaming data"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ValidatorsDAO/solana-stream"
keywords = ["solana", "blockchain", "streaming", "grpc", "shreds"]
categories = ["api-bindings", "network-programming"]

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_jsonc = { workspace = true }
solana-entry = { workspace = true }
solana-ledger = { workspace = true, features = ["agave-unstable-api"] }
solana-packet = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-vote-program = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
toml = "0.8"
tonic = { workspace = true, features = ["tls-native-roots", "tls-webpki-roots"] }
tonic-prost = { workspace = true }
url = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true, features = ["plugin"] }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-prost-build = { workspace = true }
