[package]
name = "solana-entry-decoder"
version = "2.4.0"
description = "For decoding Solana shred entry data"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-entry = {version = "3.0"}
bincode = "1.3"
napi = { version = "2.15.0", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
